# LariatMapper

./: .gitignore  DEMO.md  DESIGN.md  DETAILS.md  README.md  build_references.py  environment.yaml  get_splice_site_seqs.py  larmap.py  larmap_run.sh  larmap_setup.py  main.nf  meta.yaml  paired_end.config  pyproject.toml  requirements.txt  requirements_dev.txt  single_end.config  to-do.md
LariatMapper/: build_references.py  larmap.py
conda_recipe/: build.sh  meta.yaml  run_test.sh
data/: U12_pwm.rds  gencode_v44_U2_pwm.rds
demo_files/: sample_args.txt
dev/: to-do.md
docs/: DEMO.md
lariatmapper/: build_references.py  larmap.py
recipe/: build.sh  meta.yaml  run_test.sh
resources/: log_config.json
scripts/: bp_correction.R  bp_correction_wrapper.R  build_R_references.R  build_R_refs.R  classify_linear.py  classify_linear_reads.ipynb  classify_linear_reads.py  classify_nonlinear.py  classify_nonlinear_reads.ipynb  classify_nonlinear_reads.py  classify_reads.ipynb  classify_reads.py  end_run.sh  exceptions.py  filter_fivep_alignments.py  filter_fivep_aligns.py  filter_head_aligns.py  filter_head_aligns_old.py  filter_lariats.py  filter_threep_alignments.py  filter_trim_aligns.py  filter_trimmed_alignments.py  functions.py  get_splice_site_seqs.py  linear_mapping.R  linear_mapping_wrapper.R  make_lariat_bed.py  make_lariat_track.py  make_track.py  map_lariats.py  map_lariats.sh  pwm_build.R  summarise.py  summary_plots.R  utils.py  validate_args.py
tests/: functions.py  notes.md  test_build_references.py  test_filter_fivep_aligns.py  test_scripts.py  (+3 more)
(+152 files in other folders)
