# WORK IN PROGRESS

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LariatMapper"
version = "0.11.1 (beta)"
description = "A tool for extracting lariats from RNA-sequencing data"
readme = "README.md"
requires-python = ">=3.9, <=3.11"
license = { file = "LICENSE" }
authors = [ ]	#TODO: Fill this in before full release
maintainers = [ ]	#TODO: Fill this in before full release
keywords = [ ]	#TODO: Fill this in before full release
classifiers = [ ]	#TODO: Fill this in before full release
# "dynamic" dependency specification for pip/conda compatibility and avoiding repetition
# based on https://stackoverflow.com/questions/76722680/what-is-the-best-way-to-combine-conda-with-standard-python-packaging-tools-e-g
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements-dev.txt" }
